# csvcpp

./: CMakeLists.txt  README.md
.github/workflows/: runTests.yml
samples/: CMakeLists.txt  ReadMe.cpp  ReadMovies.cpp  ReadPlaces.cpp  WriteResults.cpp
samples/assets/: places.csv
src/: CMakeLists.txt  LineProcessor.cpp  Read.cpp  String.cpp
src/csvpp/: BasicProcessor.h  Conversions.h  LineProcessor.h  Read.h  String.h  TypedProcessor.h  Write.h
tests/: CMakeLists.txt  ReaderTests.cpp  StringTests.cpp  Utils.cpp  Utils.h  WriterTests.cpp
tests/data/: complex.csv  custom_type.csv  people.csv  simple.csv
